# api/internal/article/model.go
@@ -1,1 +1,13 @@
 package article
+
+import "time"
+
+type Article struct {
+	ID        int64
+	Title     string
+	Content   string
+	UserID    int64
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
